crates/glyim-typeck/test_data/compile-fail/mismatched_bound.g
// test-mode: compile-fail
// error-pattern: trait bound not satisfied
fn main() {
    let _x: <i32 as Iterator>::Item = "hello";
}
